# Schublade

./: .gitignore  CMakeLists.txt  README.md  schublade.sln
Code/: Base64.cpp  Base64.h  CMakeLists.txt  Code.vcxproj  Code.vcxproj.filters  CpuUsageSampler.cpp  CpuUsageSampler.h  DllInjector.cpp  DllInjector.h  ProcUtils.cpp  ProcUtils.h  Sha1.cpp  Sha1.h  SocketEndpoint.cpp  SocketEndpoint.h  SocketEndpointConverter.cpp  SocketEndpointConverter.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TypeList.hxx  networkCommon.h  stdafx.cpp  stdafx.h  strOps.h  win32_socketpair.cxx
IntegrationTest/: CMakeLists.txt  IntegrationTest.vcxproj  IntegrationTest.vcxproj.filters  Tcp_Test.cpp  stdafx.h
OaDebugVisualizer/: CMakeLists.txt  ConfigMapper.cxx  ConfigMapper.hxx  OaVisualizer.cpp  ostreamFormat.hxx
OaDebugVisualizer/DebugHelper/: CMakeLists.txt  DebugHelper.cxx  win32.h
OaDebugVisualizer/Visualizers/: OaBaseTypes.natvis  OaDataStructures.natvis  OaMessages.natvis  OaVariable.natvis  Protobuf.natvis
UnitTest/: CMakeLists.txt  Network_SocketEndpointConverter_Test.cpp  Network_SocketEndpoint_Test.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  strOps_ReplaceAll_Test.cpp  strOps_Tokenize_Test.cpp  unittest1.cpp
WebSocketServer/: CMakeLists.txt  WebSocketServer.cpp
Win32App/: CMakeLists.txt  Win32App.cpp
tools/: klassesoch.py
